--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "@tailwindcss/vite": "^4.1.11",
     "ably": "^2.10.0",
     "chess.js": "^0.13.4",
+    "ethers": "^6.15.0",
     "kokopu": "^4.12.1",
     "kokopu-react": "^3.3.3",
     "lucide-react": "^0.525.0",
     "phaser": "^3.90.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-phaser": "^0.1.6"
+    "react-phaser": "^0.1.6",
+    "react-router-dom": "^7.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
